<resources>
    <string name="app_name">World Wonders</string>
    <string name="signup">REGISTRAR</string>
    <string name="login">ENTRAR</string>
    <string name="title_activity_signup">World Wonders</string>

    <string name="action_settings">Configurações</string>
    <string name="username">Usuário</string>
    <string name="password">Senha</string>
    <string name="name">Nome</string>
    <string name="title_activity_world_wonder">World Wonders</string>

    <string name="hello_world">Hello world!</string>
    <string name="msg_progress_dialog_wait_image">Carregando imagem...</string>
    <string name="title_progress_dialog_wait_image">Aguarde</string>

    <string name="action_bookmark">Bookmark</string>
    <string name="action_share">Compartilhar</string>
    <string name="action_directions">Direção</string>
    <string name="mensagem_direcao_invalida">Direção não fornecida para a maravilha!</string>
    <string name="detail_description">Fonte: Wikipedia</string>

</resources>
